# eb_jepa_eeg

./: .gitignore  DOCUMENTATION.md  README.md  SKILL.md  baseline-analysis.md  experiments.md  observations.md  phase2a_results.md  pyproject.toml  results.tsv  tier1_results.md
.claude/: settings.json
autoresearch/: parse_log.py  program.md  submit.py
config/: benchmark.yaml  clip_pretrain.yaml  clip_pretrain_from_reve.yaml  default.yaml  jepa_pretrain.yaml  preprocess_hbn.yaml
docs/: SKILL.md  baseline-analysis.md  bendr_labram_2026-05-06.md  canonical_baselines_2026-05-04.md  canonical_replication_report_2026-05-16.md  evaluation_guide.md  exp6_details.md  final_unified_table.md  hpc_sweep_optimization_guide.md  lbfgs_optuna_bootstrap_test.md  lever1_bootstrap.md  lever1_loss_analysis.md  literature_subject_invariance.md  littwin_experiment_report.md  masked_jepa_method.md  phase1_diagnostics.md  phase1_findings.md  phase1_loss_analysis.md  phase1_probe_eval_report.md  phase1_results.json  phase2_plan.md  probe_eval_keep_channels.md  refactor_parity_audit.md  ridge_method_bootstrap_test.md  ridge_method_v2_bootstrap_test.md  ssl_research_2026-05-02.md  ssl_research_v2_2026-05-03.md  ssl_vs_trivial_baselines.md  subject_movie_metrics_2026-05-06.md  temporal_masking_objective_sweep_PLAN.md  temporal_sweep.md  tier2_native_2026-05-06.md  trf_baseline_report.md  variance_decomposition_report.md
eb_jepa/: __init__.py  anti_collapse.py  architectures.py  clip.py  eeg_decoder.py  eeg_probe_decoder.py  encoder_search.py  (+9 more)
movie_annotation/: PLAN.md  add_shot_id.py  annotate.py  preview.py  pyproject.toml  shot_detection.py  skill.md  slurm-15777582.err  slurm-15777582.out  submit_job.sh  validate_annotations.py  validation_report.md
movie_annotation/features/: __init__.py  clip_features.py  depth.py  faces.py  lowlevel.py  motion.py  objects.py
movie_annotation/notebooks/: preview.ipynb
movie_annotation/output/The_Present/: features.parquet  features_enriched.parquet  vjepa2_embeddings.npz  vjepa2_recipe.npz
movie_annotation/output/The_Present/shot_detection/: all_methods_comparison.csv  ffmpeg_boundaries.csv  pyscenedetect_boundaries.csv  shot_detection_results.json  transnetv2_boundaries.csv
movie_annotation/output/despicable_me/: features.parquet  features_enriched.parquet  vjepa2_embeddings.npz  vjepa2_recipe.npz
movie_annotation/output/despicable_me/shot_detection/: transnetv2_boundaries.csv
movie_annotation/output/diary_of_a_whimpy_kid/: features.parquet  features_enriched.parquet  vjepa2_embeddings.npz
movie_annotation/output/fun_with_fractals/: features.parquet  features_enriched.parquet
(+477 files in other folders)
